--- a/index.html
+++ b/index.html
@@ -1,12 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes Chile</title>
+    <script src="https://kit.fontawesome.com/3e5025b5f0.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <!--menu-->
+    <header>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/img/viajes.svg" alt="" width="30" height="24">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#">Página 1</a>
+                        <a class="nav-link" href="#">Página 2</a>
+
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!--carousel-->
+    <section>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="banner 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="banner 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="banner 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+    <!--Quienes somos-->
+    <section>
+        <h1 class="parrafo-1">Quiénes Somos</h1>
+        <div class="row roboto-thin">
+            <div class="col">
+                <div class="text-center">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha
+                    sido
+                    el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T.
+                    persona
+                    que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que
+                    logró
+                    hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto
+                    de
+                    relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en
+                    los
+                    60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
+                    recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye
+                    versiones
+                    de Lorem Ipsum.</p>
+            </div>
+            <div class="col">
+                <div class="text-center">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha
+                    sido
+                    el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T.
+                    persona
+                    que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que
+                    logró
+                    hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto
+                    de
+                    relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en
+                    los
+                    60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
+                    recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye
+                    versiones
+                    de Lorem Ipsum.</p>
+            </div>
+            <div class="col">
+                <div class="text-center">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha
+                    sido
+                    el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T.
+                    persona
+                    que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que
+                    logró
+                    hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto
+                    de
+                    relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en
+                    los
+                    60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más
+                    recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye
+                    versiones
+                    de Lorem Ipsum.</p>
+            </div>
+        </div>
+    </section>
+    <!--cards-->
+    <section>
+        <h1 class="mb-4">Título de las tarjetas</h1>
+        <div class="card-group">
+            <div class="card">
+                <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    </p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This card has even longer content than the first to show that equal height
+                        action.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--formulario-->
+    <section>
+        <h1>Contáctanos</h1>
+        <form>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">campo uno</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">campo dos</label>
+                <input type="text" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">campo tres</label>
+                <input type="text" class="form-control" id="exampleInputPassword1">
+            </div>
+            <button type="submit" class="btn btn-primary">Grabar</button>
+        </form>
+    </section>
+    <!-- footer -->
+    <footer>
+        <div class="row">
+            <div class="col">
+                <p>Copy right 2024</p>
+            </div>
+            <div class="col">
+                <div class="row">
+
+
+                    <div class="text-center col">
+                        <i class="fas fa-paint-brush"></i>
+                    </div>
+                    <div class="text-center col">
+                        <i class="fas fa-paint-brush"></i>
+                    </div>
+                    <div class="text-center col">
+                        <i class="fas fa-paint-brush"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
